@@ -57,6 +57,14 @@ stringValidators = (
         'regex':'^'+EMAIL_RE,
         'ignore':'',
         },
+    {'id':'isCommaSeparatedEmails',
+        'i18nid':'vocabulary_isemailaddresslist_text',
+        'title':u'Is one or more E-Mail Addresses separated by commas',
+        'errmsg':u'This is not a valid list of email addresses (separated by commas).',
+        'errid':'pfg_isEmailAddressList',
+        'regex':r'^'+EMAIL_RE[:-1]+'(,\s*'+EMAIL_RE[:-1]+')*$',
+        'ignore':'',
+        },
     {'id':'isPrintable',
         'i18nid':'vocabulary_onlyprintable_text',
         'title':u'Contains only printable characters',
