@@ -1,5 +1,8 @@
 1.3.0 (beta)
 
+ - Validator for multiple comma separated email addresses is now an
+   option for string fields. (Paul Bugni)
+
  - Added "Include Empties" flag to mailer. On by default. Similar to
    thanks page. (Steve McMahon)
 
